--- a/uni-cli/res/src/styles.css
+++ b/uni-cli/res/src/styles.css
@@ -3,16 +3,15 @@ body {
     background-color: rgb(88, 39, 76);
 }
 
-.container img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.banner{
+    width: 75%;
+    height: 80%;
+    max-height: 425px;
+    margin: 0 auto;
+    position: relative;
+    top: 15%;
 }
 
-.container {
-    padding: 60px;
-    height: 100%;
-    width: 400px;
-    background-color: white;
-    margin: 0 auto;
+.ban-body{
+    margin-top: 25px;
 }
